ajustes-Preview-Responisividade

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <main>
         <!--SEÇÃO DA DIREITA DO PROJETO -->
         <section>
+            <img class="image-mobile" src="./assets/img/image-mobile.svg" />
             <p class="HAYAO">HAYAO MIYAZAKI</p>
             <p class="titulo">A VIAGEM<br> DE CHIHIRO</p>
             <p class="paragrafo">Chihiro chega a um mundo mágico dominado por<br> uma bruxa. Aqueles que a desobedecem são<br> transformados em animais.</p><br><br>
@@ -34,8 +35,8 @@
             <button class="trailer"><a href="https://youtu.be/SgZI655GgHk" target="_blank">ASSISTA O TRAILER</a></button>
         </section>
         <!--SEÇÃO DA ESQUERDA DO PROJETO -->
-        <section>
-            <img src="./assets/img/image.svg" alt="">
+        <section class="image-responsiva">
+            <img class="image-desktop" src="./assets/img/image.svg" alt="">
         </section>
     </main>
 </body>
